# SCIML

./: .env  .gitignore  README.md  __init__.py  fourier_network_viz.tex  pyproject.toml  tach.toml
data/generation/: generate_big_heat_fno.py  generate_burgers.py  generate_heat.py  generate_heat_fno.py
data/plotting/: plot_burgers.py  plot_solutions.py
data/test_data/big_dataset_fno/heat2d/: params.json
data/test_data/example_data/burgers2d/: mu_0.npy  mu_1.npy  mu_10.npy  mu_11.npy  mu_12.npy  mu_13.npy  mu_14.npy  mu_15.npy  mu_16.npy  mu_17.npy  mu_18.npy  mu_19.npy  mu_2.npy  mu_20.npy  mu_21.npy  mu_22.npy  mu_23.npy  mu_24.npy  mu_25.npy  mu_26.npy  mu_27.npy  mu_28.npy  mu_29.npy  mu_3.npy  mu_30.npy  mu_31.npy  mu_32.npy  mu_33.npy  mu_34.npy  mu_35.npy  mu_36.npy  mu_37.npy  mu_38.npy  mu_39.npy  mu_4.npy  mu_5.npy  mu_6.npy  mu_7.npy  mu_8.npy  mu_9.npy  (+42 more)
data/test_data/example_data/heat/: mu_18.npy  mu_23.npy  mu_39.npy  params_11.json  params_14.json  params_15.json  params_16.json  params_18.json  params_2.json  params_21.json  params_24.json  params_26.json  params_31.json  params_33.json  params_35.json  params_36.json  params_38.json  params_6.json
data/test_data/example_data/heat2d/: mu_0.npy  mu_1.npy  mu_10.npy  mu_11.npy  mu_12.npy  mu_13.npy  mu_14.npy  mu_15.npy  mu_16.npy  mu_17.npy  mu_18.npy  mu_19.npy  mu_2.npy  mu_20.npy  mu_21.npy  mu_22.npy  mu_23.npy  mu_24.npy  mu_25.npy  (+56 more)
model/: __init__.py
model/deeponet/: deeponet.py
model/fno/: __init__.py  fno.py  fno2d.py  fnond.py
notebooks/: TORUN_FNO.ipynb  deep_xde_baseline.ipynb  deep_xde_baseline.py  training_deeponet_burgers.ipynb  training_deeponet_heat2d copy.ipynb  training_deeponet_heat2d.ipynb  training_deeponet_heat2d_big.ipynb  training_fno.ipynb  training_fno.py  training_fno_burgers.py  training_fno_heat.ipynb  training_fno_heat_big.ipynb  training_fno_heat_big.py
notebooks/deeponet/: training_deeponet_heat2d.ipynb
notebooks/fno/: TORUNFNO.py  training_fno_burgers.ipynb  training_fno_burgers.py  training_fno_heat.ipynb  training_fno_heat.py  training_fno_heat_big.ipynb  training_fno_heat_big.py
report/: viz_tensor.tex
tests/: test_env.py  test_models.py  test_tensorflow.py  test_tf_cuda.py  test_tf_version.py
utils/: __init__.py  utils.py
(+125 files in other folders)
