[project]
name = "SCIML"
version = "0.1.0"
description = "SCIML"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "jupytext>=1.16.7",
    "matplotlib>=3.9.3",
    "numba>=0.61.0",
    "pytest>=8.3.5",
    "ruff>=0.8.2",
    "scipy>=1.15.2",
    "tach>=0.16.3",
    "tensorflow>=2.19.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]




[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"sciml" = "."} # "QR1" = "models/QR1/", "QR2" = "models/QR2/"
packages = ["sciml"] # ["QR1", "QR2"]



[tool.setuptools.package-data]
"*" = ["*.py", "*.pyi", "*.c", "*.h", "*.cpp", "*.hpp"]
